LLVM IR for store barriers should be nicely arranged and they don't need exception checks https://bugs.webkit.org/show_bug.cgi?id=130950

Reviewed by Mark Hahnenberg.

* ftl/FTLLowerDFGToLLVM.cpp:
(JSC::FTL::LowerDFGToLLVM::emitStoreBarrier):


Canonical link: https://commits.webkit.org/149016@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166505 268f45cc-cd09-0410-ab3c-d52691b4dbfc